# calculator_service

./: pyproject.toml
.github/workflows/: build-push-deploy.yml
alembic/versions/: e1ad25e6055a_init.py
app/: config.py  main.py  serve_rpc.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/private/: api.py  exchange_rate.py
app/api/api_v1/endpoints/public/: api.py  calculator.py  fee_type.py  location.py
app/core/: app_factory.py  logger.py  utils.py
app/database/crud/: additional_fee.py  additional_special_fee.py  delivery_price.py  destination.py  exchange_rate.py  fee.py  fee_type.py  location.py  shipping_price.py  terminal.py  vehicle_type.py
app/database/db/: session.py
app/database/models/: __init__.py  additional_fee.py  additional_special_fee.py  delivery_price.py  destination.py  exchange_rate.py  fee.py  fee_type.py  location.py  shipping_price.py  terminal.py  vehicle_type.py
app/database/schemas/: additional_fee.py  additional_special_fee.py  delivery_price.py  destination.py  exchange_rate.py  fee.py  fee_type.py  location.py  shipping_price.py  terminal.py  vehicle_type.py
app/enums/: auction.py  fee_type.py
app/rpc_client_server/: auction_api.py  calulator_rpc.py  detailed_info_rpc.py  health.py
app/schemas/: calculator.py  exchange_rate.py  location.py
app/services/calculator/: calculator_service.py  exceptions.py  seed_from_csv.py  types.py
app/services/calculator/src/: additional_special_fee.csv  calculator_feetype.csv  test.html
scripts/: init_db.py  seed_from_csv.py
scripts/src/: additional_fee.csv  additional_special_fee.csv  delivery_price.csv  destination.csv  fee.csv  location.csv  prices_delivery.csv  prices_shipping.csv  shipping_price.csv  terminal.csv  vehicle_type.csv
